kubernetes-deployments/core/traefik/templates/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.xlab.io`)
      kind: Rule
      # middlewares:
      #   - name: traefik-dashboard-basicauth
      #     namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
